navbar alignment aprimorated and slider controls alignment fix

--- a/style.css
+++ b/style.css
@@ -1,73 +1,90 @@
 /*CSS reset inicio*/
 html {
-    box-sizing: border-box;
-    font-size: 16px;
-  }
-  
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-  
-  body, h1, h2, h3, h4, h5, h6, p, ol, ul {
-    margin: 0;
-    padding: 0;
-    font-weight: normal;
-  }
-  
-  ol, ul {
-    list-style: none;
-  }
-  
-  img {
-    max-width: 100%;
-    height: auto;
-  }
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+a {
+  text-decoration: none;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 /*CSS reset fim*/
 
-body{
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #084167;
 }
 
-header{
-    height: 10vh;
-    width: 100vw;
-    background-color: #042940;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+header {
+  height: 10vh;
+  width: 100vw;
+  padding: 0.5em 1.5em 0.5em 1.5em;
+  background-color: #042940;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-nav{
-    margin-right: 3vw;
+nav {
+  margin-right: 3vw;
 }
 
-.navOption{
-    margin-left: 2vw;
-    color: white;
+.navOption {
+  margin-left: 3vw;
+  color: white;
 }
 
-.logoClean{
-    height: 8vh;
-    width: 12vh;
-    margin: 1vh 1vh;
+.logoClean {
+  margin: 1vh 1vh;
 }
 
-.content{
-    display: flex;
-    width: 100vw;
-    justify-content: center;
-    align-items: center;
-    height: 90vh;
+.content {
+  display: flex;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
 }
 
-.arrow >span {
+.arrow>span {
+  font-size: 4em;
   color: #fff;
+  cursor: pointer;
 }
 
-.photo > span {
+.photo>span {
   color: #fff;
   margin: 0 auto;
   text-align: center;
 }
-
-
